<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droidklavier</string>
    <string name="quiet">QUIET</string>
    <string name="acoustic">ACOUSTIC</string>
    <string name="stop">Stop</string>
    <string name="rcs_status_standby">STANDBY</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected">Connected to: %s</string>
    <string name="connection_success">Piano connection established to %s</string>
    <string name="loading">Loading&#8230;</string>
    <string name="rcs_status_on">ON</string>
    <string name="connect">Connect</string>
    <string name="reconnect">Reconnect</string>
    <string name="settings">Settings</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="library">LIBRARY</string>
    <string name="open_library">Open Library</string>
    <string name="no_library_selected">Please select at least one library</string>
    <string name="no_keyword">Please enter some text to search</string>
    <string name="stop_playing_first">Please stop playing first</string>
    <string name="turn_piano_on">Please turn piano ON first</string>
    <string name="volume">Volume</string>
    <string name="search">Search</string>
    <string name="search_btn">SEARCH</string>
    <string name="search_complete">Search Complete</string>
    <string name="search_canceled">Search Canceled</string>
    <string name="search_hint">Artist, song&#8230;</string>
    <string name="main_volume">Main Volume</string>
    <string name="balance">Balance</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="restore_defaults">Restore defaults</string>
    <string name="select_library_prompt">Select Library</string>
    <string name="library_pianosoft">PianoSoft</string>
    <string name="library_user">User</string>

    <string-array name="libraries">
        <item>@string/library_pianosoft</item>
        <item>@string/library_user</item>
    </string-array>

    <string name="connection_lost">Piano connection was lost</string>
    <string name="connection_failed">Unable to connect to piano</string>
    <string name="searching">Searching. Please wait&#8230;</string>
    <string name="start_pos">00:00</string>
    <string name="pref_host">Piano IP Address</string>
    <string name="pref_host_summ">Piano IP on current LAN\n(default for DKV***: \'192.168.88.1\')</string>
    <string name="pref_pass">Password</string>
    <string name="pref_pass_summ">(default: \'prc\')</string>
    <string name="pref_db">Database Name</string>
    <string name="pref_db_summ">(default: \'mk4db\')</string>
    <string name="pref_db_user">Database User</string>
    <string name="pref_db_user_summ">(default: \'rcuser\')</string>
    <string name="pref_db_pass">Database Password</string>
    <string name="pref_db_pass_summ">(default: \'prc100trc100\')</string>

</resources>