<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <CheckBox
        android:id="@+id/check_library_pianosoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/library_pianosoft" />

    <CheckBox
        android:id="@+id/check_library_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_user" />

    <EditText
        android:id="@+id/search_query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:singleLine="true" />

</LinearLayout>